fix pom, add context.xml

--- a/pom.xml
+++ b/pom.xml
@@ -376,7 +376,6 @@
                 <version>2.3</version>
                 <configuration>
                     <warSourceDirectory>web</warSourceDirectory>
-                    <warName>evma</warName>
                 </configuration>
             </plugin>
             <plugin>
@@ -389,6 +388,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>evma</finalName>
     </build>
 
 </project>
